--- a/flaskblog/templates/layout.html
+++ b/flaskblog/templates/layout.html
@@ -58,6 +58,7 @@
         </div>
       </nav>
     </header>
+    
     <main role="main" class="container">
       <div class="row">
         <div class="col-md-8">
@@ -70,7 +71,14 @@
               {% endfor %}
             {% endif %}
           {% endwith %}
-          {% block content %}{% endblock %}
+
+
+
+          {% block content %}
+          {% endblock %}
+
+
+
         </div>
         <div class="col-md-4">
           <div class="content-section">
