--- a/flaskblog/templates/new_star.html
+++ b/flaskblog/templates/new_star.html
@@ -7,16 +7,16 @@
             <legend class="border-bottom mb-4"> {{ legend }}</legend>
             
             <div class="form-group">
-                {{ form.system_name.label(class="form-control-label") }}
-                {% if form.system_name.errors %}
-                    {{ form.system_name(class="form-control form-control-lg is-invalid") }}
+                {{ form.name.label(class="form-control-label") }}
+                {% if form.name.errors %}
+                    {{ form.name(class="form-control form-control-lg is-invalid") }}
                     <div class="invalid-feedback">
-                        {% for error in form.system_name.errors %}
+                        {% for error in form.name.errors %}
                             <span>{{ error }}</span>
                         {% endfor %}
                     </div>
                 {% else %}
-                    {{ form.system_name(class="form-control form-control-lg") }}
+                    {{ form.name(class="form-control form-control-lg") }}
                 {% endif %}
             </div>
             
