--- a/flaskblog/templates/new_system.html
+++ b/flaskblog/templates/new_system.html
@@ -4,7 +4,7 @@
     <form method="POST" action="">
         {{ form.hidden_tag() }}
         <fieldset class="form-group">
-            <legend class="border-bottom mb-4"> {{ legend }}</legend>
+            <legend class="border-bottom mb-4">{{ legend }}</legend>
             
             <div class="form-group">
                 {{ form.system_name.label(class="form-control-label") }}
@@ -17,6 +17,48 @@
                     </div>
                 {% else %}
                     {{ form.system_name(class="form-control form-control-lg") }}
+                {% endif %}
+            </div>
+            
+            <div class="form-group">
+                {{ form.sp_type.label(class="form-control-label") }}
+                {% if form.sp_type.errors %}
+                    {{ form.sp_type(class="form-control form-control-lg is-invalid") }}
+                    <div class="invalid-feedback">
+                        {% for error in form.sp_type.errors %}
+                            <span>{{ error }}</span>
+                        {% endfor %}
+                    </div>
+                {% else %}
+                    {{ form.sp_type(class="form-control form-control-lg") }}
+                {% endif %}
+            </div>
+            
+            <div class="form-group">
+                {{ form.sp_type.label(class="form-control-label") }}
+                {% if form.sp_type.errors %}
+                    {{ form.sp_type(class="form-control form-control-lg is-invalid") }}
+                    <div class="invalid-feedback">
+                        {% for error in form.sp_type.errors %}
+                            <span>{{ error }}</span>
+                        {% endfor %}
+                    </div>
+                {% else %}
+                    {{ form.sp_type(class="form-control form-control-lg") }}
+                {% endif %}
+            </div>
+            
+            <div class="form-group">
+                {{ form.sp_type.label(class="form-control-label") }}
+                {% if form.sp_type.errors %}
+                    {{ form.sp_type(class="form-control form-control-lg is-invalid") }}
+                    <div class="invalid-feedback">
+                        {% for error in form.sp_type.errors %}
+                            <span>{{ error }}</span>
+                        {% endfor %}
+                    </div>
+                {% else %}
+                    {{ form.sp_type(class="form-control form-control-lg") }}
                 {% endif %}
             </div>
             
