--- a/flaskblog/templates/layout.html
+++ b/flaskblog/templates/layout.html
@@ -63,7 +63,7 @@
     
     <main role="main" class="container">
       <div class="row">
-        <div class="col">
+        <div class="col-md-10">
           {% with messages = get_flashed_messages(with_categories=true) %}
             {% if messages %}
               {% for category, message in messages %}
