--- a/flaskblog/templates/tb_layout.html
+++ b/flaskblog/templates/tb_layout.html
@@ -30,10 +30,10 @@
             <div class="navbar-nav mr-auto">
               <!-- <a class="nav-item nav-link" href="{{ url_for('home') }}">Home</a> -->
               <a class="nav-item nav-link" href="{{ url_for('about') }}">About</a>
-              <a class="nav-item nav-link" href="#">Systems</a>
-              <a class="nav-item nav-link" href="#">Stars</a>
-              <a class="nav-item nav-link" href="#">Planets</a>
-              <a class="nav-item nav-link" href="#">References</a>
+              <a class="nav-item nav-link" href="{{ url_for('systems') }}">Systems</a>
+              <a class="nav-item nav-link" href="{{ url_for('stars') }}">Stars</a>
+              <a class="nav-item nav-link" href="{{ url_for('planets') }}">Planets</a>
+              <a class="nav-item nav-link" href="{{ url_for('refs') }}">References</a>
             </div>
             <!-- Navbar Right Side -->
             <div class="navbar-nav">
@@ -45,8 +45,8 @@
                 </a>
               <div class="dropdown-menu"  aria-labelledby="navbarDropdown">
               <a class="dropdown-item" href="{{ url_for('new_system') }}">Add New System</a>
-              <a class="dropdown-item" href="#">Add New Star</a>
-              <a class="dropdown-item" href="#">Add New Planet</a>
+              <a class="dropdown-item" href="{{ url_for('new_star') }}">Add New Star</a>
+              <a class="dropdown-item" href="{{ url_for('new_planet') }}">Add New Planet</a>
               <a class="dropdown-item" href="{{ url_for('account') }}">My Account</a>
               <a class="dropdown-item" href="{{ url_for('logout') }}">Log Out</a>
               </div>
