star and planet functionality addition

--- a/flaskblog/templates/about.html
+++ b/flaskblog/templates/about.html
@@ -4,7 +4,7 @@
 <h1 class="cover-heading"> About this catalogue </h1>
 <p class="lead">  This catalogue contains data for *** exoplanets in *** planetary systems with a total of *** stellar data. Among these, *** are exoplanets in binary star system and ** are in multiple star systems. We collected and curated these data by ... </p>
 
-<p class="lead"> Learn more about exoplanets in multiple star system from bellow </p>
+<p class="lead"> Learn more about exoplanets in multiple star system from the figures bellow </p>
 
 <figure class="figure">
     <img src="{{ url_for('static', filename='images/exoplanet_naming.png') }}" class="figure-img img-fluid rounded" alt="Exoplanet naming convention" style="width:400px;height:300px;"> 
