--- a/flaskblog/templates/layout.html
+++ b/flaskblog/templates/layout.html
@@ -30,10 +30,9 @@
             <div class="navbar-nav mr-auto">
               <!-- <a class="nav-item nav-link" href="{{ url_for('home') }}">Home</a> -->
               <a class="nav-item nav-link" href="{{ url_for('about') }}">About</a>
-              <a class="nav-item nav-link" href="#">Systems</a>
-              <a class="nav-item nav-link" href="#">Stars</a>
-              <a class="nav-item nav-link" href="#">Planets</a>
-              <a class="nav-item nav-link" href="#">References</a>
+              <a class="nav-item nav-link" href="{{ url_for('systems') }}">Systems</a>
+              <a class="nav-item nav-link" href="{{ url_for('stars') }}">Stars</a>
+              <a class="nav-item nav-link" href="{{ url_for('planets') }}">Planets</a>
             </div>
             <!-- Navbar Right Side -->
             <div class="navbar-nav">
@@ -45,8 +44,8 @@
                 </a>
               <div class="dropdown-menu"  aria-labelledby="navbarDropdown">
               <a class="dropdown-item" href="{{ url_for('new_system') }}">Add New System</a>
-              <a class="dropdown-item" href="#">Add New Star</a>
-              <a class="dropdown-item" href="#">Add New Planet</a>
+              <a class="dropdown-item" href="{{ url_for('new_star') }}">Add New Star</a>
+              <a class="dropdown-item" href="{{ url_for('new_planet') }}">Add New Planet</a>
               <a class="dropdown-item" href="{{ url_for('account') }}">My Account</a>
               <a class="dropdown-item" href="{{ url_for('logout') }}">Log Out</a>
               </div>
@@ -63,7 +62,7 @@
     
     <main role="main" class="container">
       <div class="row">
-        <div class="col-md-10">
+        <div class="col-md-8">
           {% with messages = get_flashed_messages(with_categories=true) %}
             {% if messages %}
               {% for category, message in messages %}
@@ -77,13 +76,26 @@
 
 
           {% block content %}
-          <!-- HERE -->
+            <!-- HERE -->
           {% endblock %}
 
-
-
+        </div>  
+        
+        <div class="col-md-4">
+          <div class="content-section">
+            <h3>Our Sidebar</h3>
+            <p class='text-muted'>We can put any information here we'd like.
+              <ul class="list-group">
+                <li class="list-group-item list-group-item-light">Announcements</li>
+                <li class="list-group-item list-group-item-light">Contact us</li>
+                <li class="list-group-item list-group-item-light">Latest addition</li>
+                <li class="list-group-item list-group-item-light">etc</li>
+              </ul>
+            </p>
+          </div>
         </div>
       </div>
+
     </main>
   
     <!-- Optional JavaScript -->
@@ -91,8 +103,6 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.12.1/css/jquery.dataTables.css">
-    <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.js"></script>
 </body>
 
 {% block scripts %}
