--- a/flaskblog/templates/star.html
+++ b/flaskblog/templates/star.html
@@ -6,7 +6,7 @@
             <div class="article-metadata">
                 <legend class=""> {{ star.star_name }}  </legend>
                 {% if current_user.is_authenticated %}
-                    <a class="btn btn-primary mt-1 mb-1" href="{{ url_for('update_star', star_id=star.id) }}"> Update </a>
+                    <a class="btn btn-primary mt-1 mb-1" href="{{ url_for('stars.update_star', star_id=star.id) }}"> Update </a>
                     <button type="button" class="btn btn-danger m-1" data-toggle="modal" data-target="#deleteModal"> Delete </button>
                 {% endif %}
             </div>
@@ -44,12 +44,12 @@
                   </button>
                 </div>
                 <div class="modal-body">
-                  Deleting is permanent. If you want to modify the entry, consider <a href="{{ url_for('update_star', star_id=star.id) }}"> Updating </a> instead of deleting.
+                  Deleting is permanent. If you want to modify the entry, consider <a href="{{ url_for('stars.update_star', star_id=star.id) }}"> Updating </a> instead of deleting.
                 </div>
                 <div class="modal-footer">
                   <button type="button" class="btn btn-secondary" data-dismiss="modal"> Close </button>
-                  <a class="btn btn-primary" href="{{ url_for('update_star', star_id=star.id) }}"> Update </a>
-                  <form action="{{ url_for('delete_star', star_id=star.id) }}" method="POST">
+                  <a class="btn btn-primary" href="{{ url_for('stars.update_star', star_id=star.id) }}"> Update </a>
+                  <form action="{{ url_for('stars.delete_star', star_id=star.id) }}" method="POST">
                     <input class="btn btn-danger" type="submit" value="Delete!">
                   </form>
                 </div>
