--- a/flaskblog/templates/planet.html
+++ b/flaskblog/templates/planet.html
@@ -14,13 +14,13 @@
             <table class="table table-bordered">
                 <thead>
                   <tr>
-                    <th scope="col">Planet Parameter </th>
+                    <th scope="col">Planetary Parameter </th>
                     <th scope="col">Value </th>
                   </tr>
                 </thead>
                 <tbody>
                   
-                    {% for param, val in planet.items() %}
+                    {% for param, val in planet.__dict__ | dictsort  %}
                         {% if param not in ['user_id', '_sa_instance_state'] %}
                         <tr> <td> {{ param }} </td> <td> {{ val }} </td> </tr>
                         {% endif %}
