--- a/flaskblog/templates/planet.html
+++ b/flaskblog/templates/planet.html
@@ -20,11 +20,11 @@
                 </thead>
                 <tbody>
                   
-                    {% for param, val in planet.__dict__ | dictsort  %}
-                        {% if param not in ['user_id', '_sa_instance_state'] %}
-                        <tr> <td> {{ param }} </td> <td> {{ val }} </td> </tr>
-                        {% endif %}
-                    {% endfor %}
+                  {% for field in form %}
+                    {% if field.label.text not in ['Submit', 'CSRF Token'] %}
+                      <tr> <td> {{ field.label.text }} </td> <td> {{ field.data }} </td> </tr>
+                    {% endif %}
+                  {% endfor %}
 
                 </tbody>
               </table>
