--- a/flaskblog/templates/tb_layout.html
+++ b/flaskblog/templates/tb_layout.html
@@ -30,11 +30,11 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarToggle">
             <div class="navbar-nav mr-auto">
-              <!-- <a class="nav-item nav-link" href="{{ url_for('main.home') }}">Home</a> -->
-              <a class="nav-item nav-link" href="{{ url_for('main.about') }}">About</a>
-              <a class="nav-item nav-link" href="{{ url_for('systems.systems') }}">Systems</a>
-              <a class="nav-item nav-link" href="{{ url_for('stars.stars') }}">Stars</a>
-              <a class="nav-item nav-link" href="{{ url_for('planets.planets') }}">Planets</a>
+              <!-- <a class="nav-item nav-link" href="{{ url_for('home') }}">Home</a> -->
+              <a class="nav-item nav-link" href="{{ url_for('about') }}">About</a>
+              <a class="nav-item nav-link" href="{{ url_for('systems') }}">Systems</a>
+              <a class="nav-item nav-link" href="{{ url_for('stars') }}">Stars</a>
+              <a class="nav-item nav-link" href="{{ url_for('planets') }}">Planets</a>
             </div>
             <!-- Navbar Right Side -->
             <div class="navbar-nav">
@@ -45,16 +45,16 @@
                   User Menu
                 </a>
               <div class="dropdown-menu"  aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="{{ url_for('systems.new_system') }}">Add New System</a>
-                <a class="dropdown-item" href="{{ url_for('stars.new_star') }}">Add New Star</a>
-                <a class="dropdown-item" href="{{ url_for('planets.new_planet') }}">Add New Planet</a>
-                <a class="dropdown-item" href="{{ url_for('users.account') }}">My Account</a>
-                <a class="dropdown-item" href="{{ url_for('users.logout') }}">Log Out</a>
+                <a class="dropdown-item" href="{{ url_for('new_system') }}">Add New System</a>
+                <a class="dropdown-item" href="{{ url_for('new_star') }}">Add New Star</a>
+                <a class="dropdown-item" href="{{ url_for('new_planet') }}">Add New Planet</a>
+                <a class="dropdown-item" href="{{ url_for('account') }}">My Account</a>
+                <a class="dropdown-item" href="{{ url_for('logout') }}">Log Out</a>
               </div>
           </li>
               {% else %}
-                <a class="nav-item nav-link" href="{{ url_for('users.login') }}">Login</a>
-                <a class="nav-item nav-link" href="{{ url_for('users.register') }}">Register</a>
+                <a class="nav-item nav-link" href="{{ url_for('login') }}">Login</a>
+                <a class="nav-item nav-link" href="{{ url_for('login') }}">Register</a>
               {% endif %}
             </div>
           </div>
